# gnome-clocks

./: .coafile  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  CONTRIBUTING.md  HACKME  Makefile.am  NEWS  NEWS.md  README  README.md  alarm.py  autogen.sh  clocks.doap  clocks.py  configure.ac  gnome-clocks  gnome-clocks.doap  gnome-clocks.flatpak  gtk-style.css  main.py  meson.build  meson_options.txt  org.gnome.clocks.json  setup.py  storage.py  timer.py  utils.py  widgets.py
_build/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
_build/data/: org.gnome.clocks.appdata.xml.in  org.gnome.clocks.c  org.gnome.clocks.desktop.in  org.gnome.clocks.gschema.xml  org.gnome.clocks.h  org.gnome.clocksDevel.appdata.xml  org.gnome.clocksDevel.desktop  org.gnome.clocksDevel.search-provider.ini  org.gnome.clocksDevel.service
_build/help/ca/: alarm-add.page  alarm-edit.page  alarm-remove.page  alarm-snooze-stop.page  ca.gmo  index.page  legal.xml  stopwatch.page  timer.page  world-add.page  world-check.page  world-remove.page
_build/help/cs/: alarm-add.page  alarm-edit.page  alarm-remove.page  alarm-snooze-stop.page  cs.gmo  index.page  legal.xml  stopwatch.page  timer.page  world-add.page  world-check.page  world-remove.page
_build/help/da/: alarm-add.page  alarm-edit.page  alarm-remove.page  alarm-snooze-stop.page  da.gmo  index.page  legal.xml  stopwatch.page  timer.page  (+3 more)
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: coredata.dat.prev
_build/po/: af.gmo  an.gmo  ar.gmo  as.gmo  be.gmo  bg.gmo  bn_IN.gmo  bs.gmo  ca.gmo  ca@valencia.gmo  cs.gmo  da.gmo  de.gmo  el.gmo  en_GB.gmo  eo.gmo  es.gmo  et.gmo  eu.gmo  fa.gmo  fi.gmo  fr.gmo  fur.gmo  ga.gmo  gd.gmo  gl.gmo  gu.gmo  he.gmo  hi.gmo  hr.gmo  hu.gmo  id.gmo  is.gmo  it.gmo  ja.gmo  kk.gmo  kn.gmo  ko.gmo  lt.gmo  lv.gmo  (+30 more)
_build/src/: gnome-clocks
build-aux/flatpak/: org.gnome.clocks.json  org.gnome.clocksDevel.json
build-aux/snap/: snapcraft.yaml
data/: gnome-clocks-alarm@.service.in  gnome-clocks.desktop.in  gnome-clocks.gresource.xml  gtk-style.css  meson.build  org.gnome.clocks.appdata.xml.in  org.gnome.clocks.appdata.xml.in.in  org.gnome.clocks.desktop.in  org.gnome.clocks.desktop.in.in  org.gnome.clocks.gschema.xml.in  org.gnome.clocks.gschema.xml.in.in  org.gnome.clocks.metainfo.xml.in.in  org.gnome.clocks.search-provider.ini  org.gnome.clocks.search-provider.ini.in  org.gnome.clocks.service.in
data/appdata/: OBSOLETE  gnome-clocks.appdata.xml  org.gnome.clocks.appdata.xml  org.gnome.clocks.appdata.xml.in
data/css/: gnome-clocks.css  gnome-clocks.dark.css  gnome-clocks.highcontrast.css
data/flatpak/: org.gnome.clocks.json
data/gtk/: help-overlay.ui  menus.ui
data/sounds/: CREDITS  meson.build
data/sounds/alarms/: beep-beep.flac  bird.flac  bonfire.flac  boudoir.flac  bouncing.flac  cautious-steps.flac  chirping.flac  class-act.flac  crossing-bell.flac  daydreaming.flac  digitone.flac  enchanting.flac  glass-bell.flac  guitar.flac  jolly.flac  meson.build  mystery.flac  ping-ping.flac  school-bell.flac  sonar.flac  sparkling.flac  tingling.flac  toys.flac
data/ui/: alarm-day-picker-row.blp  alarm-day-picker-row.ui  alarm-face.blp  alarm-face.ui  alarm-ringing-panel.blp  alarm-ringing-panel.ui  alarm-row.blp  alarm-row.ui  alarm-setup-dialog.blp  alarm-setup-dialog.ui  alarm.ui  alarmdaypickerrow.ui  alarmringing.ui  alarmrow.ui  alarmsetupdialog.ui  alarmtile.ui  alarmtile.ui~  header-bar.blp  header-bar.ui  headerbar.ui  menu.ui  meson.build  shortcuts-dialog.blp  sound-chooser-row.blp  sound-chooser-row.ui  sound-chooser.blp  sound-chooser.ui  stopwatch-face.blp  stopwatch-face.ui  stopwatch-laps-row.blp  stopwatch-laps-row.ui  stopwatch.ui  stopwatch.ui~  stopwatchlapsrow.ui  stopwatchlapsrow.ui~  timer-face.blp  timer-face.ui  timer-row.blp  timer-row.ui  timer-setup-dialog.blp  (+26 more)
gnomeclocks/: __init__.py  alarm.py  app.py  clocks.py  defs.py.in  gnome_clocks.py  pycanberra.py  stopwatch.py  storage.py  timer.py  utils.py  widgets.py  world.py
help/: LINGUAS  Makefile.am  meson.build
help/C/: alarm-add.page  alarm-edit.page  alarm-remove.page  alarm-snooze-stop.page  index.page  stopwatch.page  timer.page  world-add.page  world-check.page  world-remove.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
m4/: .gitignore
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gnome-clocks.pot  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  (+47 more)
snap/: snapcraft.yaml
snap/plugins/: x-meson.py
src/: Makefile.am  about.py  alarm-day-picker-row.vala  alarm-face.vala  alarm-item.vala  alarm-ringing-panel.vala  alarm-row.vala  alarm-setup-dialog.vala  alarm-sound-model.vala  alarm.py  alarm.ui  alarm.vala  alarms_handler.py  application.vala  clock.vala  clocks.py  config.vapi  cutils.c  geoclue.vala  geocode-glib-1.0.vapi  geocoding.vala  geolocation-info.vala  geolocation-monitor.vala  geolocation-utils.vala  gnome-clocks-activate-alarm.vala  gnome-clocks.gresource.xml  gnome-desktop-3.0.vapi  gnome_clocks.py  gnome_clocks.py~  gweather-3.0.vapi  header-bar.vala  headerbar.vala  launcher.vala  main.py  main.vala  menu.ui  meson.build  providers.vala  search-provider.vala  sound-chooser-row.vala  (+32 more)
subprojects/: libhandy.wrap
(+180 files in other folders)
