@YELP_HELP_RULES@

HELP_ID = gnome-clocks

HELP_MEDIA = \
	figures/gnome-clocks.png

HELP_FILES = \
	alarm-add.page \
	alarm-edit.page \
	alarm-remove.page \
	alarm-snooze-stop.page \
	stopwatch.page \
	timer.page \
	world-add.page \
	world-check.page \
	world-remove.page \
	index.page \
	legal.xml

HELP_LINGUAS = 

-include $(top_srcdir)/git.mk
