help_files = [
  'alarm-add.page',
  'alarm-edit.page',
  'alarm-remove.page',
  'alarm-snooze-stop.page',
  'stopwatch.page',
  'timer.page',
  'world-add.page',
  'world-check.page',
  'world-remove.page',
  'index.page',
  'legal.xml'
]

help_media = [
  'figures/gnome-clocks.png'
]

help_linguas = [
  'ca',
  'cs',
  'da',
  'de',
  'el',
  'es',
  'fi',
  'fr',
  'gl',
  'hu',
  'id',
  'ko',
  'nl',
  'pl',
  'pt_BR',
  'ru',
  'sv'
]

gnome.yelp(
  meson.project_name(),
  sources: help_files,
  media: help_media,
  languages: help_linguas,
)
