help_files = [
  'alarm-add.page',
  'alarm-edit.page',
  'alarm-remove.page',
  'alarm-snooze-stop.page',
  'stopwatch.page',
  'timer.page',
  'world-add.page',
  'world-check.page',
  'world-remove.page',
  'index.page',
  'legal.xml'
]

help_media = [
  'figures/org.gnome.clocks.svg'
]

gnome.yelp(
  meson.project_name(),
  sources: help_files,
  media: help_media
)
